crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__sequences__sequence-with-divert-branch.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/sequences/sequence-with-divert-branch
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] === PASS
> "" [Choices: "again" (0) -> 0]
> "a then k2\n" [Choices: "again" (0) -> 0]
> "b then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
> "c then k2\n" [Choices: "again" (0) -> 0]
outcome: InputsExhausted
